--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
   },
   "dependencies": {
     "call-next-tick": "^2.0.1",
+    "d3-queue": "^3.0.7",
     "get-random-wiki-topic": "^1.0.4",
+    "idmaker": "^0.1.1",
     "iscool": "^1.1.56",
     "probable": "^2.1.1",
     "split-to-words": "^1.0.2",
     "standard-bail": "^2.0.1",
+    "static-web-archive-on-git": "^2.0.1",
     "twit": "^2.2.4"
   }
 }
